--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -12,7 +12,7 @@ An element used to display a [Material Design submenu](http://www.google.com/des
 It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or inside another submenu.
 
 ```html
-<mat-menu-button target="myMenu"></mat-menu-button>
+<mat-icon-button target="myMenu"></mat-icon-button>
 <mat-menu id="myMenu">
     <mat-option label="First option"></mat-option>
     <mat-option label="Second option"></mat-option>
@@ -48,7 +48,8 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
 @devDependency mat-demo ExpandJS/mat-demo#0.9.5
 @devDependency mat-divider ExpandJS/mat-divider#0.9.5
-@devDependency mat-menu-button ExpandJS/mat-menu-button#0.9.5
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.5
+@devDependency mat-icons ExpandJS/mat-icons#0.9.5
 @devDependency mat-option ExpandJS/mat-option#0.9.5
 -->
 
