--- a/mat-menu.html
+++ b/mat-menu.html
@@ -10,11 +10,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 An element used to display a [Material Design menu](http://www.google.com/design/spec/components/menus.html).
 
 For an easier integration, it's recommended to use it in conjunction with
-[mat-menu-button](http://expandjs.com/elements/mat-menu-button) and
+[mat-icon-button](http://expandjs.com/elements/mat-icon-button) and
 [mat-option](/http://expandjs.comelements/mat-option).
 
 ```html
-<mat-menu-button target="myMenu"></mat-menu-button>
+<mat-icon-button icon="navigation:more-vert" target="myMenu" toggles-target></mat-icon-button>
 <mat-menu id="myMenu">
     <mat-option label="First option"></mat-option>
     <mat-option label="Second option"></mat-option>
@@ -27,7 +27,7 @@ In addition to the default view mode, it provides a
 which is similar to most desktop applications' menus.
 
 ```html
-<mat-menu-button target="myMenu"></mat-menu-button>
+<mat-icon-button icon="navigation:more-vert" target="myMenu" toggles-target></mat-icon-button>
 <mat-menu id="myMenu" cascade>
     <mat-option label="First option"></mat-option>
     <mat-option label="Second option"></mat-option>
@@ -38,7 +38,7 @@ which is similar to most desktop applications' menus.
 Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), allowing for multi level menu.
 
 ```html
-<mat-menu-button target="myMenu"></mat-menu-button>
+<mat-icon-button icon="navigation:more-vert" target="myMenu" toggles-target></mat-icon-button>
 <mat-menu id="myMenu">
     <mat-option label="First option"></mat-option>
     <mat-option label="Second option"></mat-option>
@@ -75,7 +75,8 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
 
 @devDependency mat-demo ExpandJS/mat-demo#0.9.5
 @devDependency mat-divider ExpandJS/mat-divider#0.9.5
-@devDependency mat-menu-button ExpandJS/mat-menu-button#0.9.5
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.5
+@devDependency mat-icons ExpandJS/mat-icons#0.9.5
 @devDependency mat-option ExpandJS/mat-option#0.9.5
 -->
 
