- Added mat-breadcrumb - Added xp-finder-behavior - Major documentation improvements - Minor bug fixes - Moved item finding from xp-selected-behavior to xp-finder-behavior

--- a/mat-menu.html
+++ b/mat-menu.html
@@ -61,31 +61,32 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
 
 @adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
 @behavior xp-adapter-behavior /bower_components/xp-adapter-behavior/xp-adapter-behavior.html
+@behavior xp-master-behavior /bower_components/xp-master-behavior/xp-master-behavior.html
 @behavior xp-referral-behavior /bower_components/xp-referral-behavior/xp-referral-behavior.html
 @behavior xp-targeter-behavior /bower_components/xp-targeter-behavior/xp-targeter-behavior.html
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.5
-@dependency mat-option ExpandJS/mat-option#0.9.5
-@dependency mat-overlay ExpandJS/mat-overlay#0.9.5
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.5
-@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.5
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.5
-@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.5
+@dependency expandjs ExpandJS/expandjs#0.9.6
+@dependency mat-option ExpandJS/mat-option#0.9.6
+@dependency mat-overlay ExpandJS/mat-overlay#0.9.6
+@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.6
+@dependency xp-master-behavior ExpandJS/xp-master-behavior#0.9.6
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.6
+@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.6
 
-@devDependency mat-demo ExpandJS/mat-demo#0.9.5
-@devDependency mat-divider ExpandJS/mat-divider#0.9.5
-@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.5
-@devDependency mat-icons ExpandJS/mat-icons#0.9.5
-@devDependency mat-option ExpandJS/mat-option#0.9.5
+@devDependency mat-demo ExpandJS/mat-demo#0.9.6
+@devDependency mat-divider ExpandJS/mat-divider#0.9.6
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.6
+@devDependency mat-icons ExpandJS/mat-icons#0.9.6
+@devDependency mat-option ExpandJS/mat-option#0.9.6
 -->
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../expandjs/expandjs.html">
 <link rel="import" href="../mat-option/mat-option.html">
 <link rel="import" href="../mat-overlay/mat-overlay.html">
-<link rel="import" href="../xp-master-state/xp-master-state.html">
 <link rel="import" href="../xp-adapter-behavior/xp-adapter-behavior.html">
+<link rel="import" href="../xp-master-behavior/xp-master-behavior.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
 <link rel="import" href="../xp-targeter-behavior/xp-targeter-behavior.html">
 
@@ -104,7 +105,6 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
     </style>
 
     <template>
-        <template is="xp-master-state" id="xpMasterState" slaves="{{submenus}}" slave-tag="mat-submenu" on-slaves-changed="_handleSlaves"></template>
         <mat-overlay id="matMenuAdaptee" background="[[background]]" context="[[self]]" data="{{data}}" position="[[_computePosition(cascade)]]" showed="{{showed}}" target="{{target}}" z="[[z]]">
             <content id="content"></content>
         </mat-overlay>
@@ -119,6 +119,7 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
             // BEHAVIORS
             behaviors: [
                 Polymer.XPAdapterBehavior,
+                Polymer.XPMasterBehavior,
                 Polymer.XPReferralBehavior,
                 Polymer.XPTargeterBehavior
             ],
@@ -167,10 +168,28 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
 
             /*********************************************************************/
 
+            /**
+             * Returns the slaves map.
+             *
+             * @method _setupSlaves
+             * @returns {Object}
+             * @private
+             */
+            _setupSlaves: function () {
+                return {submenus: 'mat-submenu'};
+            },
+
+            /*********************************************************************/
+
             // LISTENERS
             listeners: {
                 'xp-activate': '_handleActivate'
             },
+
+            // OBSERVERS
+            observers: [
+                '_submenusChanged(submenus.*)'
+            ],
 
             // PROPERTIES
             properties: {
@@ -240,7 +259,9 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
                  */
                 submenus: {
                     notify: true,
-                    type: Array
+                    readOnly: true,
+                    type: Array,
+                    value: function () { return []; }
                 },
 
                 /**
@@ -272,6 +293,11 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
                 XP.forEach(this.submenus || [], function (submenu) { submenu.background = post; });
             },
 
+            // OBSERVER
+            _submenusChanged: function () {
+                this.cascade = this.cascade || this.submenus.length > 0;
+            },
+
             /*********************************************************************/
 
             // LISTENER
@@ -286,12 +312,6 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
                 var self = this;
                 if (!XP.matches(event.detail.firer, 'mat-option') || event.detail.firer.toggleable) { return; }
                 XP.delay(function () { if (!event.defaultPrevented) { self.hide(); } });
-            },
-
-            // HANDLE
-            _handleSlaves: function () {
-                var self = this;
-                XP.delay(function () { self.cascade = self.cascade || self.submenus.length > 0; });
             }
         });
     </script>
