--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -35,22 +35,25 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
 @adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
 @behavior xp-adapter-behavior /bower_components/xp-adapter-behavior/xp-adapter-behavior.html
+@behavior xp-master-behavior /bower_components/xp-master-behavior/xp-master-behavior.html
 @behavior xp-referral-behavior /bower_components/xp-referral-behavior/xp-referral-behavior.html
+@behavior xp-slave-behavior /bower_components/xp-slave-behavior/xp-slave-behavior.html
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.5
-@dependency mat-icons ExpandJS/mat-icons#0.9.5
-@dependency mat-option ExpandJS/mat-option#0.9.5
-@dependency mat-overlay ExpandJS/mat-overlay#0.9.5
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.5
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.5
-@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.5
+@dependency expandjs ExpandJS/expandjs#0.9.6
+@dependency mat-icons ExpandJS/mat-icons#0.9.6
+@dependency mat-option ExpandJS/mat-option#0.9.6
+@dependency mat-overlay ExpandJS/mat-overlay#0.9.6
+@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.6
+@dependency xp-master-behavior ExpandJS/xp-master-behavior#0.9.6
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.6
+@dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.6
 
-@devDependency mat-demo ExpandJS/mat-demo#0.9.5
-@devDependency mat-divider ExpandJS/mat-divider#0.9.5
-@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.5
-@devDependency mat-icons ExpandJS/mat-icons#0.9.5
-@devDependency mat-option ExpandJS/mat-option#0.9.5
+@devDependency mat-demo ExpandJS/mat-demo#0.9.6
+@devDependency mat-divider ExpandJS/mat-divider#0.9.6
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.6
+@devDependency mat-icons ExpandJS/mat-icons#0.9.6
+@devDependency mat-option ExpandJS/mat-option#0.9.6
 -->
 
 <link rel="import" href="../polymer/polymer.html">
@@ -58,10 +61,10 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 <link rel="import" href="../mat-icons/navigation-icons.html">
 <link rel="import" href="../mat-option/mat-option.html">
 <link rel="import" href="../mat-overlay/mat-overlay.html">
-<link rel="import" href="../xp-master-state/xp-master-state.html">
 <link rel="import" href="../xp-adapter-behavior/xp-adapter-behavior.html">
+<link rel="import" href="../xp-master-behavior/xp-master-behavior.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
-<link rel="import" href="../xp-slave-state/xp-slave-state.html">
+<link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
 <link rel="import" href="mat-menu.html">
 
 <dom-module id="mat-submenu">
@@ -87,9 +90,6 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
     </style>
 
     <template>
-        <template is="xp-master-state" id="xpMasterState" slaves="{{submenus}}" slave-tag="mat-submenu"></template>
-        <template is="xp-slave-state" master="{{menu}}" master-tag="mat-menu"></template>
-        <template is="xp-slave-state" master="{{supermenu}}" master-tag="mat-submenu"></template>
         <mat-option id="matSubmenuHolder" icon="[[icon]]" icon-src="[[iconSrc]]" label="[[label]]" secondary-icon="navigation:arrow-drop-down" on-xp-activate="_handleShow"></mat-option>
         <mat-overlay id="matSubmenuAdaptee" background="[[background]]" context="[[self]]" position="aside" showed="{{showed}}" target="[[self.$.matSubmenuHolder]]" z="[[z]]">
             <content id="content"></content>
@@ -105,7 +105,9 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
             // BEHAVIORS
             behaviors: [
                 Polymer.XPAdapterBehavior,
-                Polymer.XPReferralBehavior
+                Polymer.XPMasterBehavior,
+                Polymer.XPReferralBehavior,
+                Polymer.XPSlaveBehavior
             ],
 
             /*********************************************************************/
@@ -144,6 +146,30 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                 var self = this;
                 if (self.adaptee) { self.adaptee.toggle(); }
                 return self;
+            },
+
+            /*********************************************************************/
+
+            /**
+             * Returns the masters map.
+             *
+             * @method _setupMasters
+             * @returns {Object}
+             * @private
+             */
+            _setupMasters: function () {
+                return {menu: 'mat-menu', supermenu: 'mat-submenu'};
+            },
+
+            /**
+             * Returns the slaves map.
+             *
+             * @method _setupSlaves
+             * @returns {Object}
+             * @private
+             */
+            _setupSlaves: function () {
+                return {submenus: 'mat-submenu'};
             },
 
             /*********************************************************************/
@@ -226,6 +252,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                 menu: {
                     notify: true,
                     observer: '_menuChanged',
+                    readOnly: true,
                     value: null
                 },
 
@@ -255,7 +282,9 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                  */
                 submenus: {
                     notify: true,
-                    type: Array
+                    readOnly: true,
+                    type: Array,
+                    value: function () { return []; }
                 },
 
                 /**
@@ -269,6 +298,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                 supermenu: {
                     notify: true,
                     observer: '_menuChanged',
+                    readOnly: true,
                     value: null
                 },
 
