--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -34,7 +34,6 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 @demo http://expandjs.com/demo/mat-menu
 
 @adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
-@behavior xp-adapter-behavior /bower_components/xp-adapter-behavior/xp-adapter-behavior.html
 @behavior xp-master-behavior /bower_components/xp-master-behavior/xp-master-behavior.html
 @behavior xp-referral-behavior /bower_components/xp-referral-behavior/xp-referral-behavior.html
 @behavior xp-slave-behavior /bower_components/xp-slave-behavior/xp-slave-behavior.html
@@ -44,7 +43,6 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 @dependency mat-icons ExpandJS/mat-icons#0.9.10
 @dependency mat-option ExpandJS/mat-option#0.9.10
 @dependency mat-overlay ExpandJS/mat-overlay#0.9.10
-@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.10
 @dependency xp-master-behavior ExpandJS/xp-master-behavior#0.9.10
 @dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.10
 @dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.10
@@ -61,7 +59,6 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 <link rel="import" href="../mat-icons/navigation-icons.html">
 <link rel="import" href="../mat-option/mat-option.html">
 <link rel="import" href="../mat-overlay/mat-overlay.html">
-<link rel="import" href="../xp-adapter-behavior/xp-adapter-behavior.html">
 <link rel="import" href="../xp-master-behavior/xp-master-behavior.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
 <link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
@@ -106,7 +103,6 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
             // BEHAVIORS
             behaviors: [
-                Polymer.XPAdapterBehavior,
                 Polymer.XPMasterBehavior,
                 Polymer.XPReferralBehavior,
                 Polymer.XPSlaveBehavior
@@ -178,6 +174,21 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
             // PROPERTIES
             properties: {
+
+                /**
+                 * The adapted element.
+                 *
+                 * @attribute adaptee
+                 * @type Element
+                 * @notifies
+                 * @readonly
+                 */
+                adaptee: {
+                    notify: true,
+                    readOnly: true,
+                    type: Object,
+                    value: null
+                },
 
                 /**
                  * The element's data.
@@ -364,7 +375,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
             // LISTENER
             ready: function () {
-                this._adapt(this.$.matSubmenuAdaptee);
+                this._setAdaptee(this.$.matSubmenuAdaptee);
             },
 
             /*********************************************************************/
