--- a/demo-element.html
+++ b/demo-element.html
@@ -1,8 +1,7 @@
 <link rel="import" href="../mat-demo/mat-demo.html">
 <link rel="import" href="../mat-divider/mat-divider.html">
 <link rel="import" href="../mat-icon-button/mat-icon-button.html">
-<link rel="import" href="../mat-icons/navigation-icons.html">
-<link rel="import" href="../mat-option/mat-option.html">
+<link rel="import" href="../mat-icons/mat-icons.html">
 <link rel="import" href="mat-menu.html">
 <link rel="import" href="mat-submenu.html">
 
@@ -10,18 +9,24 @@
 
     <template>
 
+        <style>
+            :host {
+                display: block;
+            }
+        </style>
+
         <mat-demo name="mat-menu" type="element" url="http://expandjs.com/elements/mat-menu">
 
             <mat-demo-panel label="Default">
                 <script type="text/html">
-                    <mat-icon-button behavior="toggle" icon="navigation:more-vert" target="demoDefault"></mat-icon-button>
+                    <mat-icon-button behavior="toggle" icon="mat:more-vert" target="demoDefault"></mat-icon-button>
                     <mat-menu id="demoDefault">
                         <mat-option label="Option 1"></mat-option>
                         <mat-option label="Option 2"></mat-option>
                         <mat-option label="Option 3"></mat-option>
                     </mat-menu>
                 </script>
-                <mat-icon-button behavior="toggle" icon="navigation:more-vert" target="demoDefault"></mat-icon-button>
+                <mat-icon-button behavior="toggle" icon="mat:more-vert" target="demoDefault"></mat-icon-button>
                 <mat-menu id="demoDefault">
                     <mat-option label="Option 1"></mat-option>
                     <mat-option label="Option 2"></mat-option>
@@ -31,7 +36,7 @@
 
             <mat-demo-panel label="Cascading">
                 <script type="text/html">
-                    <mat-icon-button behavior="toggle" icon="navigation:more-vert" target="demoCascading"></mat-icon-button>
+                    <mat-icon-button behavior="toggle" icon="mat:more-vert" target="demoCascading"></mat-icon-button>
                     <mat-menu id="demoCascading">
                         <mat-option label="Option 1" toggleable active></mat-option>
                         <mat-option label="Option 2" toggleable></mat-option>
@@ -52,7 +57,7 @@
                         </mat-submenu>
                     </mat-menu>
                 </script>
-                <mat-icon-button behavior="toggle" icon="navigation:more-vert" target="demoCascading"></mat-icon-button>
+                <mat-icon-button behavior="toggle" icon="mat:more-vert" target="demoCascading"></mat-icon-button>
                 <mat-menu id="demoCascading">
                     <mat-option label="Option 1" toggleable active></mat-option>
                     <mat-option label="Option 2" toggleable></mat-option>
