--- a/mat-submenu.html
+++ b/mat-submenu.html
@@ -7,9 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-An element used to display a [Material Design submenu](http://www.google.com/design/spec/components/menus.html).
+A custom element used to display a [Material Design submenu](http://www.google.com/design/spec/components/menus.html).
 
-It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or inside another submenu.
+It must be used inside a
+[mat-menu](http://expandjs.com/elements/mat-menu) or inside another
+[mat-submenu](http://expandjs.com/elements/mat-submenu).
 
 ```html
 <mat-icon-button target="myMenu"></mat-icon-button>
@@ -27,71 +29,45 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
 @element mat-submenu
 @description A custom element used to display a Material Design submenu
-@keywords material design, material menu, web app, html5, expandjs, web-components
+@keywords material design, material menu, expandjs, web app, custom elements, web-components
 @group containers
+@hot
+
 @homepage http://expandjs.com/elements/mat-submenu
-@repository https://github.com/ExpandJS/mat-submenu
+@repository https://github.com/ExpandJS/mat-menu
 @demo http://expandjs.com/demo/mat-menu
 
-@adapts mat-overlay /bower_components/mat-overlay/mat-overlay.html
-@behavior xp-master-behavior /bower_components/xp-master-behavior/xp-master-behavior.html
-@behavior xp-referral-behavior /bower_components/xp-referral-behavior/xp-referral-behavior.html
-@behavior xp-slave-behavior /bower_components/xp-slave-behavior/xp-slave-behavior.html
+@behavior xp-submenu-behavior /bower_components/xp-menu-behavior/xp-submenu-behavior.html
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.11
-@dependency mat-icons ExpandJS/mat-icons#0.9.11
-@dependency mat-option ExpandJS/mat-option#0.9.11
-@dependency mat-overlay ExpandJS/mat-overlay#0.9.11
-@dependency xp-master-behavior ExpandJS/xp-master-behavior#0.9.11
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.11
-@dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.11
+@dependency expandjs ExpandJS/expandjs#0.10.0
+@dependency mat-option ExpandJS/mat-option#0.10.0
+@dependency mat-overlay ExpandJS/mat-overlay#0.10.0
+@dependency xp-menu-behavior ExpandJS/xp-menu-behavior#0.10.0
 
-@devDependency mat-demo ExpandJS/mat-demo#0.9.11
-@devDependency mat-divider ExpandJS/mat-divider#0.9.11
-@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.11
-@devDependency mat-icons ExpandJS/mat-icons#0.9.11
-@devDependency mat-option ExpandJS/mat-option#0.9.11
+@devDependency mat-demo ExpandJS/mat-demo#0.10.0
+@devDependency mat-divider ExpandJS/mat-divider#0.10.0
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.10.0
+@devDependency mat-icons ExpandJS/mat-icons#0.10.0
 -->
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../expandjs/expandjs.html">
-<link rel="import" href="../mat-icons/navigation-icons.html">
 <link rel="import" href="../mat-option/mat-option.html">
 <link rel="import" href="../mat-overlay/mat-overlay.html">
-<link rel="import" href="../xp-master-behavior/xp-master-behavior.html">
-<link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
-<link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
+<link rel="import" href="../xp-menu-behavior/xp-submenu-behavior.html">
+<link rel="import" href="../xp-menu-behavior/xp-submenu-styles.html">
 <link rel="import" href="mat-menu.html">
 
 <dom-module id="mat-submenu">
 
-    <template>
+    <template strip-whitespace>
 
-        <style>
-            :host {
-                display: block;
-                overflow: visible;
-            }
+        <style include="xp-submenu-styles"></style>
 
-            :host #matSubmenuHolder::shadow #matOptionSecondaryIcon {
-                -webkit-transform: rotate(-90deg);
-                transform: rotate(-90deg);
-            }
+        <mat-option class="holder" active="[[showed]]" arrow="right" icon="[[icon]]" icon-src="[[iconSrc]]" label="[[label]]" on-xp-activate="_handleShow"></mat-option>
 
-            :host([showed]) #matSubmenuHolder::shadow #matOptionRipple #matRippleBackground {
-                opacity: 0.10;
-            }
-
-            :host #matSubmenuAdaptee::shadow #matOverlayBody {
-                padding: 16px 0;
-            }
-        </style>
-
-        <mat-option id="matSubmenuHolder" icon="[[icon]]" icon-src="[[iconSrc]]" label="[[label]]" secondary-icon="navigation:arrow-drop-down" on-xp-activate="_handleShow"></mat-option>
-        <mat-overlay id="matSubmenuAdaptee" background="[[background]]" context="[[self]]" position="aside" showed="{{showed}}" target="[[self.$.matSubmenuHolder]]" z="[[z]]">
-            <content id="content"></content>
-        </mat-overlay>
+        <mat-overlay class="overlay" background="[[background]]" position="aside" showed="{{showed}}" target="[[holder]]" z="[[z]]"><content></content></mat-overlay>
 
     </template>
 
@@ -103,119 +79,30 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
 
             // BEHAVIORS
             behaviors: [
-                Polymer.XPMasterBehavior,
-                Polymer.XPReferralBehavior,
-                Polymer.XPSlaveBehavior
+                Polymer.XPSubmenuBehavior
             ],
 
             /*********************************************************************/
 
-            /**
-             * Hides the submenu.
-             *
-             * @method hide
-             * @returns {Element}
-             */
-            hide: function () {
-                var self = this;
-                if (self.adaptee) { self.adaptee.hide(); }
-                return self;
-            },
-
-            /**
-             * Shows the submenu.
-             *
-             * @method show
-             * @returns {Element}
-             */
-            show: function () {
-                var self = this;
-                if (self.adaptee) { self.adaptee.show(); }
-                return self;
-            },
-
-            /**
-             * Toggles the submenu.
-             *
-             * @method toggle
-             * @returns {Element}
-             */
-            toggle: function () {
-                var self = this;
-                if (self.adaptee) { self.adaptee.toggle(); }
-                return self;
-            },
-
-            /*********************************************************************/
-
-            /**
-             * Returns the masters map.
-             *
-             * @method _setupMasters
-             * @returns {Object}
-             * @private
-             */
-            _setupMasters: function () {
-                return {menu: 'mat-menu', supermenu: 'mat-submenu'};
-            },
-
-            /**
-             * Returns the slaves map.
-             *
-             * @method _setupSlaves
-             * @returns {Object}
-             * @private
-             */
-            _setupSlaves: function () {
-                return {submenus: 'mat-submenu'};
-            },
-
-            /*********************************************************************/
+            // OBSERVERS
+            observers: [
+                '_superenuChanged(supermenu)'
+            ],
 
             // PROPERTIES
             properties: {
 
                 /**
-                 * The adapted element.
+                 * The submenu's holder.
                  *
-                 * @attribute adaptee
-                 * @type Element
+                 * @attribute holder
+                 * @type Object
                  * @notifies
                  * @readonly
                  */
-                adaptee: {
+                holder: {
                     notify: true,
-                    readOnly: true,
-                    type: Object,
-                    value: null
-                },
-
-                /**
-                 * The element's data.
-                 *
-                 * @attribute data
-                 * @type *
-                 * @notifies
-                 */
-                data: {
-                    notify: true,
-                    value: null
-                },
-
-                /**
-                 * If set to true, the element is hidden.
-                 *
-                 * @attribute empty
-                 * @type boolean
-                 * @default false
-                 * @notifies
-                 * @readonly
-                 */
-                empty: {
-                    comptued: '_computeEmpty(label)',
-                    notify: true,
-                    reflectToAttribute: true,
-                    type: Boolean
+                    readOnly: true
                 },
 
                 /**
@@ -226,8 +113,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                  */
                 icon: {
                     reflectToAttribute: true,
-                    type: String,
-                    value: null
+                    type: String
                 },
 
                 /**
@@ -238,8 +124,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                  */
                 iconSrc: {
                     reflectToAttribute: true,
-                    type: String,
-                    value: null
+                    type: String
                 },
 
                 /**
@@ -250,71 +135,7 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                  */
                 label: {
                     reflectToAttribute: true,
-                    type: String,
-                    value: null
-                },
-
-                /**
-                 * The master menu.
-                 *
-                 * @attribute menu
-                 * @type Element
-                 * @notifies
-                 * @readonly
-                 */
-                menu: {
-                    notify: true,
-                    observer: '_menuChanged',
-                    readOnly: true,
-                    type: Object,
-                    value: null
-                },
-
-                /**
-                 * If set to true, the submenu is showed.
-                 *
-                 * @attribute showed
-                 * @type boolean
-                 * @default false
-                 * @notifies
-                 */
-                showed: {
-                    notify: true,
-                    observer: '_showedChanged',
-                    reflectToAttribute: true,
-                    type: Boolean,
-                    value: false
-                },
-
-                /**
-                 * The slave submenus.
-                 *
-                 * @attribute submenus
-                 * @type Array
-                 * @notifies
-                 * @readonly
-                 */
-                submenus: {
-                    notify: true,
-                    readOnly: true,
-                    type: Array,
-                    value: function () { return []; }
-                },
-
-                /**
-                 * The master submenu.
-                 *
-                 * @attribute supermenu
-                 * @type Element
-                 * @notifies
-                 * @readonly
-                 */
-                supermenu: {
-                    notify: true,
-                    observer: '_menuChanged',
-                    readOnly: true,
-                    type: Object,
-                    value: null
+                    type: String
                 },
 
                 /**
@@ -322,74 +143,36 @@ It must be used inside a [mat-menu](http://expandjs.com/elements/mat-menu) or in
                  *
                  * @attribute z
                  * @type number
-                 * @default 8
-                 * @readonly
+                 * @default 9
+                 * @notifies
                  */
                 z: {
-                    readOnly: true,
+                    notify: true,
+                    reflectToAttribute: true,
                     type: Number,
-                    value: 8
+                    value: 9
                 }
             },
 
             /*********************************************************************/
 
-            // COMPUTER
-            _computeEmpty: function (label) {
-                return !label;
-            },
-
-            /*********************************************************************/
-
             // OBSERVER
-            _menuChanged: function (post, pre) {
-
-                // Vars
-                var self = this;
-
-                // Checking
-                if (arguments.length < 2) { return; }
-
-                // Listening
-                if (pre) { self.unlisten(pre, 'showed-changed', '_handleHide'); }
-                if (post) { self.listen(post, 'showed-changed', '_handleHide'); }
+            _superenuChanged: function () {
 
                 // Setting
-                if (self.supermenu || self.menu) { self._setZ((self.supermenu || self.menu).z + 1); }
-
-                // Handling
-                self._handleHide();
-            },
-
-            // OBSERVER
-            _showedChanged: function (post) {
-
-                // Vars
-                var self = this;
-
-                // Showing
-                if (post && (self.supermenu || self.menu)) { (self.supermenu || self.menu).show(); }
+                this.z = this.supermenu ? this.supermenu.z + 1 : 9;
             },
 
             /*********************************************************************/
 
             // LISTENER
             ready: function () {
-                this._setAdaptee(this.$.matSubmenuAdaptee);
+
+                // Setting
+                this._setHolder(Polymer.dom(this.root).querySelector('.holder'));
             },
 
             /*********************************************************************/
-
-            // HANDLER
-            _handleHide: function () {
-
-                // Vars
-                var self = this,
-                    menu = self.supermenu || self.menu;
-
-                // Hiding
-                if (menu && !menu.showed) { self.hide(); }
-            },
 
             // HANDLER
             _handleShow: function (event) {
