--- a/mat-menu.html
+++ b/mat-menu.html
@@ -95,6 +95,7 @@ Menus can also contain [mat-submenu](http://expandjs.com/elements/mat-submenu), 
             :host .body {
                 box-sizing: border-box;
                 padding: 8px 0;
+                position: relative;
             }
 
             :host-context([cascade]) .body {
